tests/test_files_pa3/new/SemanticErrors/UnaryOpsBad1.ic
class A
{
	
	static void main(string[] args) { }

	int ints(int x)
	{
		int i;
		boolean b;
		
		b = -x;

		i = -b;
		
		return i;
	}
}